<resources>
    <string name="app_name">List Movie</string>
    <string name="judul_film">Re: Zero kara Hajimeru Isekai Seikatsu - Memory Snow</string>
    <string name="genre_film">ANIMATION, ADVENTURE</string>
    <string name="rating_film">54</string>
    <string name="release">October 6, 2018</string>
    <string name="teks_rate">Rate</string>
    <string name="teks_release">Release</string>
    <string name="teks_contoh">blabla blab la bl a blabla b labla bl a blabla bla b la bla b la bla blabla bla blabla bla b la blabla</string>
    <string name="deskripsi_background">ini background poster</string>
    <string name="ini_poster">ini poster</string>
    <string name="teks_nilai_rate">75</string>
    <string name="teks_judul">Venom</string>
    <string name="teks_language">Language</string>
    <string name="teks_durasi">Duration</string>
    <string name="teks_genre">Genre</string>
    <string name="teks_overview">Overview</string>
    <string name="teks_contoh_overview">Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</string>
    <string name="teks_crew">Featured Crew</string>
    <string name="teks_contoh_crew">-Mike Zeck (Characters)  -Ruben Fleischer (Director)  -Scott Rosenberg (Screenplay)</string>
    <string-array name="data_judul_movie">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spiders Web</item>
        <item>The Mule</item>
        <item>Venom</item>
        <item>Re: Zero kara Hajimeru Isekai Seikatsu - Memory Snow</item>
    </string-array>
    <string-array name="data_rilis_movie">
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>November 27, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 6, 2018</item>
        <item>October 25, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
        <item>October 6, 2018</item>
    </string-array>
    <string-array name="data_genre_movie">
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy, Adventure, Comedy, Science Fiction</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action. Adventure, Animation, Science Fiction, Comedy</item>
        <item>Action, Crime, Thriller</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
        <item>Animation, Adventure</item>
    </string-array>
    <string-array name="data_rating_movie">
        <item>68</item>
        <item>83</item>
        <item>70</item>
        <item>81</item>
        <item>65</item>
        <item>67</item>
        <item>69</item>
        <item>76</item>
        <item>74</item>
        <item>65</item>
        <item>63</item>
        <item>66</item>
        <item>60</item>
        <item>66</item>
        <item>58</item>
        <item>84</item>
        <item>60</item>
        <item>65</item>
        <item>66</item>
        <item>54</item>
    </string-array>
    <string-array name="data_bahasa_movie">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Indonesian</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
    </string-array>
    <string-array name="data_durasi_movie">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
        <item>1h 15m</item>
    </string-array>
    <string-array name="data_crew_movie">
        <item>-James Wan (Director, Story) \n-Will Beall (Screenplay, Story) \n-Paul Norris (Characters) \n-Mort Weisinger (Characters) \n-David Leslie Johnson-McGoldrick (Screenplay) \n-Geoff Johns (Story)</item>
        <item>-Joe Russo (Director) \n-Anthony Russo (Director) \n-Stephen McFeely (Screenplay) \n-Christopher Markus (Screenplay)</item>
        <item>-Susanne Bier (Director) \n-Josh Malerman (Novel) \n-Eric Heisserer (Screenplay)</item>
        <item>-Anthony McCarten (Screenplay, Story) \n-Bryan Singer (Director) \n-Peter Morgan (Story)</item>
        <item>-Christina Hodson (Screenplay, Story) \n-Travis Knight (Director)</item>
        <item>-Sylvester Stallone (Characters, Screenplay) \n-Steven Caple Jr. (Director) \n-Juel Taylor (Screenplay) \n-Sascha Penn (Story) \n-Cheo Hodari Coker (Story)</item>
        <item>-David Leitch (Director) \n-Paul Wernick (Writer) \n-Ryan Reynolds (Writer) \n-Rhett Reese (Writer)</item>
        <item>-Dean DeBlois (Director, Screenplay, Story) \n-Cressida Cowell (Novel)</item>
        <item>-Akira Toriyama (Characters, Screenplay, Story) \n-Tatsuya Nagamine (Director)</item>
        <item>-M. Night Shyamalan (Director, Screenplay)</item>
        <item>-Donovan Marsh (Director) \n-Don Keith (Novel) \n-George Wallace (Novel) \n-Jamie Moss (Screenplay) \n-Arne Schmidt (Screenplay)</item>
        <item>-Rob Marshall (Director, Story) \n-David Magee (Screenplay, Story) \n-P.L. Travers (Novel) \n-John DeLuca (Story)</item>
        <item>-Christian Rivers (Director) \n-Philip Reeve (Novel) \n-Philippa Boyens (Screenplay) \n-Fran Walsh (Screenplay) \n-Peter Jackson (Screenplay)</item>
        <item>-Aris Nugraha (Director)</item>
        <item>-Ben Chandler (Screenplay, Story) \n-Otto Bathurst (Director) \n-David James Kelly (Screenplay)</item>
        <item>-Rodney Rothman (Director, Screenplay) \n-Phil Lord (Screenplay, Story) \n-Steve Ditko (Characters) \n-Stan Lee (Characters) \n-Bob Persichetti (Director) \n-Peter Ramsey (Director)</item>
        <item>-Fede Alvarez (Director, Screenplay) \n-Stieg Larsson (Characters) \n-David Lagercrantz (Novel) \n-Jay Basu (Screenplay) \n-Steven Knight (Screenplay)</item>
        <item>-Clint Eastwood (Director) \n-Nick Schenk (Screenplay)</item>
        <item>-Mike Zeck (Characters) \n-David Michelinie (Characters) \n-Todd McFarlane (Characters) \n-Ruben Fleischer (Director) \n-Kelly Marcel (Screenplay) \n-Jeff Pinkner (Screenplay) \n-Scott Rosenberg (Screenplay)</item>
        <item>-Shinichi Otsuka (Characters) \n-Tatsuya Koyanagi (Director) \n-Masaharu Watanabe (Director)</item>
    </string-array>
</resources>