<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_detail_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_background_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nilai_height_background_poster"
            android:scaleType="center"
            android:src="@drawable/venom"
            android:contentDescription="@string/deskripsi_background" />

        <RelativeLayout
            android:id="@+id/rl_detail_top_background_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nilai_height_background_poster"
            android:background="@color/transparan_hitam">

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="@dimen/width_detail_poster"
                android:layout_height="@dimen/height_detail_poster"
                android:layout_centerInParent="true"
                android:foregroundGravity="center"
                android:src="@drawable/venom"
                android:contentDescription="@string/ini_poster" />

            <LinearLayout
                android:id="@+id/ll_detail_background_rate"
                android:layout_width="@dimen/width_detail_rate"
                android:layout_height="@dimen/height_detail_rate"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/transparan_biru"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_teks_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_v10dp"
                    android:text="@string/teks_rate"
                    android:textAlignment="center"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/tv_detail_rate"
                    android:layout_width="@dimen/width_nilai_rate"
                    android:layout_height="@dimen/height_nilai_rate"
                    android:text="@string/teks_nilai_rate"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_judul"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_detail_title"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/d_v5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:padding="@dimen/d_v10dp"
                android:text="@string/teks_judul"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/d_tv24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_marginRight="@dimen/d_v10dp"
            android:layout_marginLeft="@dimen/d_v10dp"
            android:id="@+id/ll_information_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_detail_top_background_poster"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/d_v10dp"
                android:layout_marginBottom="@dimen/d_v2dp"
                >

                <TextView
                    android:id="@+id/tv_teks_rilis"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/d_tv15sp"
                    android:textStyle="bold"
                    android:text="@string/teks_release"
                    android:gravity="center_vertical"
                    android:textColor="@color/hitam"
                    />

                <TextView
                    android:id="@+id/tv_detail_rilis"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh"
                    android:textSize="@dimen/d_tv15sp"
                    android:layout_weight="8"
                    android:maxLines="2"
                    android:textColor="@color/hitam"
                    android:ellipsize="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/d_v2dp"
                android:layout_marginBottom="@dimen/d_v2dp"
                >

                <TextView
                    android:id="@+id/tv_teks_bahasa"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/d_tv15sp"
                    android:textStyle="bold"
                    android:text="@string/teks_language"
                    android:gravity="center_vertical"
                    android:textColor="@color/hitam"
                    />

                <TextView
                    android:id="@+id/tv_detail_bahasa"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh"
                    android:textSize="@dimen/d_tv15sp"
                    android:layout_weight="8"
                    android:maxLines="2"
                    android:textColor="@color/hitam"
                    android:ellipsize="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_durasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/d_v2dp"
                android:layout_marginBottom="@dimen/d_v2dp"
                >

                <TextView
                    android:id="@+id/tv_teks_durasi"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/d_tv15sp"
                    android:textStyle="bold"
                    android:text="@string/teks_durasi"
                    android:gravity="center_vertical"
                    android:textColor="@color/hitam"
                    />

                <TextView
                    android:id="@+id/tv_detail_durasi"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh"
                    android:textSize="@dimen/d_tv15sp"
                    android:layout_weight="8"
                    android:maxLines="2"
                    android:textColor="@color/hitam"
                    android:ellipsize="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/d_v2dp"
                android:layout_marginBottom="@dimen/d_v10dp"
                >

                <TextView
                    android:id="@+id/tv_teks_genre"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/d_tv15sp"
                    android:textStyle="bold"
                    android:text="@string/teks_genre"
                    android:gravity="center_vertical"
                    android:textColor="@color/hitam"
                    />

                <TextView
                    android:id="@+id/tv_detail_genre"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/d_v0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh"
                    android:textSize="@dimen/d_tv15sp"
                    android:layout_weight="8"
                    android:maxLines="2"
                    android:textColor="@color/hitam"
                    android:ellipsize="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d_v10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_teks_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d_v2dp"
                    android:text="@string/teks_overview"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/d_tv22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh_overview"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/d_tv15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_featured_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d_v10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_featured_crew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d_v2dp"
                    android:text="@string/teks_crew"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/d_tv22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_crew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teks_contoh_crew"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/d_tv15sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>